# 2022-hw

./: .gitignore  .gitmodules
task-0/: CMakeLists.txt  Doxyfile
task-0/include/complex/: complex.hpp
task-0/include/rational/: exceptions.hpp  rational.hpp
task-0/include/vector/: cmprsd_vector.hpp  exceptions.hpp
task-0/src/: complex.cpp  main.cpp  rational.cpp
task-0/src/rational/: rational.cpp
task-0/test/: complex_test.cpp  rational_test.cpp  vector_test.cpp
task-1/: CMakeLists.txt  Readme.md  main.cpp  reducer.cpp  worker.cpp
task-1/formal-task/: references.bib  task.tex
task-1/include/scheduling/: annealing.hpp  operations.hpp  temperature.hpp  time_diagram.hpp
task-1/src/: annealing.cpp  operations.cpp  temperature.cpp  time_diagram.cpp
task-1/utils/analysis/: Pipfile  analysis.ipynb
task-1/utils/generator/: generator.py
task-1/utils/launcher/: launch_experiment.py  out.csv  out_parall.csv
task-2/: CMakeLists.txt
task-2/include/symb_math/: functions.hpp  functions_factory.hpp  gradient_descent.hpp
task-2/src/: const.cpp  div_func.cpp  exponent.cpp  functions_factory.cpp  gradient_descent.cpp  ident.cpp  mul_func.cpp  polynom.cpp  power.cpp  sub_func.cpp  sum_func.cpp
task-2/tests/: const.cpp  div_func.cpp  exponent.cpp  functions_factory.cpp  gradient_descent.cpp  ident.cpp  mul_func.cpp  op_overload.cpp  persistance.cpp  polynom.cpp  power.cpp  sub_func.cpp  sum_func.cpp  tree_computation.cpp
